# StreakBot

./: .gitignore  Procfile  README.md  database.py  habit.py  main.py  pyproject.toml  requirements.txt
backend/: config.py  database.py
data/: db.json
habit/: habit.py
helpers/: habitCreation.py  habitDeletion.py  habitRetrieval.py  habitUpdate.py  helpers.py
utils/: Logger.py  config.py  messages.py
